--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   }
